--- a/app/src/main/res/layout/activity_speaking_exercises2.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises2.xml
@@ -79,24 +79,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingBottom="30dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView12">
 
-            <Button
-                android:id="@+id/record"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="Record" />
 
-            <Button
-                android:id="@+id/play"
+            <ImageView
+                android:id="@+id/microphone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="Play" />
+                android:layout_marginEnd="5dp"
+                app:srcCompat="@drawable/baseline_mic_none_24" />
+
+            <ImageButton
+                android:id="@+id/play_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:layout_marginStart="5dp"
+                app:srcCompat="@drawable/baseline_play_arrow_24" />
+
+
         </LinearLayout>
 
 
@@ -108,6 +112,7 @@
             android:gravity="center"
             android:paddingBottom="10dp"
             android:textColor="@color/black"
+            android:layout_marginTop="20dp"
             android:text="@string/yo_soy_de_canada"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
