--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/market"
     android:orientation="vertical"
-    tools:context=".BuyActivity">
+    tools:context=".SellActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,9 +45,10 @@
 
 
             <TextView
-                android:id="@+id/minusPlusText"
+                android:id="@+id/minusText"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:text="@string/minus"
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +63,7 @@
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/minusPlusText"
+                app:layout_constraintStart_toEndOf="@id/minusText"
                 app:layout_constraintTop_toTopOf="parent" />
             <ImageView
                 android:id="@+id/coins_image2"
@@ -72,7 +73,7 @@
                 android:background="@drawable/gold_coin"
                 app:layout_constraintStart_toEndOf="@id/total_price"
                 app:layout_constraintTop_toTopOf="@id/total_price"
-                app:layout_constraintBottom_toBottomOf="@id/minusPlusText"/>
+                app:layout_constraintBottom_toBottomOf="@id/minusText"/>
 
             <Button
                 android:id="@+id/action_button"
@@ -80,12 +81,13 @@
                 android:layout_height="wrap_content"
                 app:backgroundTint="@null"
                 android:background="@drawable/wooden_tile_button"
+                android:text="Buy"
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-       </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
