--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -3,75 +3,89 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp"
-    >
+    android:padding="16dp">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/white"/>
+            android:text="test"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/remove"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="@null"
-                app:srcCompat="@drawable/baseline_remove_24" />
-
-            <TextView
-                android:id="@+id/counterTextView"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/remove"
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:background="@null"
+                    app:srcCompat="@drawable/baseline_remove_24" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/counterTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:gravity="center"
+                        android:text="0"
+                        android:textColor="@color/white"
+                        android:textSize="25sp" />
+                </LinearLayout>
+
+
+                <ImageButton
+                    android:id="@+id/add"
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    app:srcCompat="@drawable/baseline_add_24" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/own"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="8dp"
-                android:text="0"
-                android:textSize="30sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
 
-            <ImageButton
-                android:id="@+id/add"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:background="@null"
-                app:srcCompat="@drawable/baseline_add_24" />
         </LinearLayout>
-
-        <!--        <TextView-->
-        <!--            android:id="@+id/own"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:text="Own: 10"-->
-        <!--            android:gravity="center" />-->
-
 
     </LinearLayout>
 
