--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -8,6 +8,54 @@
     android:fitsSystemWindows="true"
     tools:context=".MarketActivity">
 
+    <Button
+        android:id="@+id/speaking_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/signpost"
+        android:contentDescription="@string/speaking_button_dsc"
+        android:text="@string/speaking"
+        android:textColor="@color/white"
+        app:backgroundTint="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </Button>
+
+    <Button
+        android:id="@+id/factory_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/signpost"
+        android:contentDescription="@string/factory_button_dsc"
+        android:text="@string/factory"
+        android:textColor="@color/white"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </Button>
+
+    <Button
+        android:id="@+id/farm_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/signpost"
+        android:contentDescription="@string/farm_button_dsc"
+        android:text="@string/farm"
+        android:textColor="@color/white"
+        app:backgroundTint="@null"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </Button>
+
     <TextView
         android:id="@+id/animalStand"
         android:layout_width="150dp"
