--- a/app/src/main/res/layout/lang_exercise1_layout.xml
+++ b/app/src/main/res/layout/lang_exercise1_layout.xml
@@ -218,7 +218,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:textColor="@color/black"
-            android:text="Continue"
+            android:text="@string/continue_str"
             android:textSize="24sp"
             android:visibility="visible" />
     </LinearLayout>
