--- a/app/src/main/res/layout/lang_exercise2_layout.xml
+++ b/app/src/main/res/layout/lang_exercise2_layout.xml
@@ -3,113 +3,100 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="732dp"
-        android:layout_height="1515dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.26"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        app:srcCompat="@drawable/factory_background" />
+    android:layout_height="match_parent"
+    android:background="@drawable/factory_background">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="Farming Factory"
+        android:text="@string/farming_factory"
         android:textColor="#E1E1E1"
         android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <View
         android:id="@+id/view2"
-        android:layout_width="443dp"
-        android:layout_height="954dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#3E3434"
         android:backgroundTint="#B5A4A4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.39" />
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.9"
+        />
 
-    <ImageView
+    <TextView
         android:id="@+id/imageView4"
-        android:layout_width="58dp"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.054"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/x"
+        android:fontFamily="sans-serif-black"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toTopOf="@+id/view2"
-        app:layout_constraintVertical_bias="0.013"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="443dp"
         android:layout_height="2dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toTopOf="@+id/view2"
-        app:layout_constraintVertical_bias="0.078" />
+        android:layout_marginTop="60dp"/>
 
     <TextView
         android:id="@+id/progress_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="2/3"
-        android:textColor="#000000"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.881"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.065"
-        tools:ignore="HardcodedText" />
+        android:text="@string/_2_3"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/view2"
+        app:layout_constraintEnd_toEndOf="@id/view2"
+        />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/image_of_a_cow"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintStart_toStartOf="@+id/view2"
+        app:layout_constraintTop_toBottomOf="@id/divider2"
+        app:srcCompat="@drawable/cow" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="Vaca"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        android:text="@string/vaca"
+        android:textColor="@color/black"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/divider2"
-        app:layout_constraintVertical_bias="0.377" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
 
     <ImageView
         android:id="@+id/btn_audio"
-        android:layout_width="46dp"
-        android:layout_height="41dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.652"
-        app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/divider2"
-        app:layout_constraintVertical_bias="0.381"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/textView4"
+        app:layout_constraintBottom_toBottomOf="@id/textView4"
         app:srcCompat="@drawable/speaker" />
 
     <Button
@@ -152,10 +139,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintHorizontal_bias="0.207"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/btn_chicken"
-        app:layout_constraintVertical_bias="0.197" />
+        app:layout_constraintVertical_bias="0.196" />
 
     <Button
         android:id="@+id/btn_pig"
@@ -168,52 +155,43 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/btn_cow"
+        app:layout_constraintHorizontal_bias="0.638"
+        app:layout_constraintStart_toStartOf="@id/view2"
         app:layout_constraintTop_toBottomOf="@+id/btn_cauliflower"
-        app:layout_constraintVertical_bias="0.233" />
+        app:layout_constraintVertical_bias="0.195" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="258dp"
-        android:layout_height="298dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toTopOf="@+id/view2"
-        app:layout_constraintVertical_bias="0.185"
-        app:srcCompat="@drawable/cow" />
 
     <LinearLayout
         android:id="@+id/valid_input_box"
-        android:layout_width="435dp"
-        android:layout_height="155dp"
-        android:background="#B5A4A4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="@color/grass"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toTopOf="@+id/view2"
-        app:layout_constraintVertical_bias="0.969">
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.98">
 
         <TextView
             android:id="@+id/text_valid_answer"
             android:layout_width="match_parent"
             android:layout_height="76dp"
             android:fontFamily="sans-serif-black"
-            android:text="Your answer was correct!"
-            android:textColor="#000000"
-            android:textSize="34sp"
+            android:text="@string/correct_answer"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textAlignment="center"
             android:visibility="visible" />
 
         <Button
             android:id="@+id/btn_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#385A29"
-            android:text="Continue"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/black"
+            android:text="@string/continue_str"
             android:textSize="24sp"
             android:visibility="visible" />
     </LinearLayout>
