--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -17,7 +17,9 @@
     <TextView
         android:id="@+id/close_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:paddingRight="20dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/cancel_button"
         android:textColor="@color/white"
