--- a/app/src/main/res/layout/activity_camp_fire.xml
+++ b/app/src/main/res/layout/activity_camp_fire.xml
@@ -9,6 +9,55 @@
     android:background="@drawable/campfire">
 
     <Button
+        android:id="@+id/farm_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/signpost"
+        android:contentDescription="@string/factory_button_dsc"
+        android:text="@string/speaking"
+        android:textColor="@color/white"
+        app:backgroundTint="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></Button>
+
+    <Button
+        android:id="@+id/market_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="264dp"
+        android:background="@drawable/signpost"
+        android:contentDescription="@string/market_button_dsc"
+        android:text="@string/market"
+        android:textColor="@color/white"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    </Button>
+
+    <Button
+        android:id="@+id/factory_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/signpost"
+        android:contentDescription="@string/speaking_button_dsc"
+        android:text="@string/factory"
+        android:textColor="@color/white"
+        app:backgroundTint="@null"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </Button>
+
+    <Button
         android:id="@+id/start_exc"
         android:layout_width="250dp"
         android:layout_height="150dp"
