Change 0.5 to have black color

--- a/app/src/main/res/layout/activity_speaking_exercises1.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises1.xml
@@ -74,6 +74,7 @@
                 android:layout_marginStart="10dp"
                 android:textStyle="bold"
                 android:textSize="20sp"
+                android:textColor="@color/black"
                 android:text="@string/x0_5"/>
         </LinearLayout>
 
