--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="wood">#4f200f</color>
     <color name="campfire_ground">#c09154</color>
     <color name="grass">#086f44</color>
+    <color name="factory_red">#cc9595</color>
 </resources>
