--- a/app/src/main/res/layout/lang_exercise1_layout.xml
+++ b/app/src/main/res/layout/lang_exercise1_layout.xml
@@ -1,34 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/factory_background">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-black"
-        android:text="@string/farming_factory"
-        android:textColor="#E1E1E1"
-        android:textSize="48sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
     <View
         android:id="@+id/view2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#3E3434"
-        android:backgroundTint="#B5A4A4"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/factory_red"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintWidth_percent="0.9"
-        app:layout_constraintHeight_percent="0.9"
-        />
+        app:layout_constraintHeight_percent="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.9" />
 
     <TextView
         android:id="@+id/imageView4"
@@ -36,74 +24,73 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="@string/x"
         android:fontFamily="sans-serif-black"
+        android:text="@string/x"
+        android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toTopOf="@+id/view2"
-        />
+        app:layout_constraintTop_toTopOf="@+id/view2" />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="0dp"
         android:layout_height="2dp"
+        android:layout_marginTop="60dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toTopOf="@+id/view2"
-        app:layout_constraintWidth_percent="0.9"
-        android:layout_marginTop="60dp"/>
+        app:layout_constraintWidth_percent="0.9" />
 
     <TextView
         android:id="@+id/progress_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/_1_3"
         android:textColor="@color/black"
         android:textSize="30sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="@id/view2"
         app:layout_constraintEnd_toEndOf="@id/view2"
-        />
+        app:layout_constraintTop_toTopOf="@id/view2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/how_are_you_my_friend"
         android:textColor="@color/black"
         android:textSize="30sp"
-        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/divider2"/>
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/question_mark"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="sans-serif-black"
         android:rotation="180"
         android:text="@string/question_mark"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -111,41 +98,40 @@
         android:id="@+id/textline_como"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/blank_space"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textline_estas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/blank_space"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:layout_marginTop="60dp"
-        app:layout_constraintStart_toStartOf="@id/view2"
         app:layout_constraintEnd_toEndOf="@id/view2"
+        app:layout_constraintStart_toStartOf="@id/view2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textline_amigo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/blank_space"
         android:textColor="@color/black"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="20dp"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/btn_como"
@@ -153,6 +139,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#4A4542"
         android:text="Cómo"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
@@ -167,6 +154,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#4A4542"
         android:text="estás"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
@@ -181,6 +169,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#4A4542"
         android:text="amigo"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
@@ -193,10 +182,10 @@
         android:id="@+id/valid_input_box"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/grass"
         android:orientation="vertical"
-        android:layout_marginBottom="5dp"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -208,9 +197,9 @@
             android:layout_height="76dp"
             android:fontFamily="sans-serif-black"
             android:text="@string/correct_answer"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="30sp"
-            android:textAlignment="center"
             android:visibility="visible" />
 
         <Button
@@ -218,8 +207,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
-            android:textColor="@color/black"
             android:text="@string/continue_str"
+            android:textColor="@color/black"
             android:textSize="24sp"
             android:visibility="visible" />
     </LinearLayout>
