--- a/app/src/main/res/layout/lang_exercise2_layout.xml
+++ b/app/src/main/res/layout/lang_exercise2_layout.xml
@@ -1,37 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/factory_background">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-black"
-        android:text="@string/farming_factory"
-        android:textColor="#E1E1E1"
-        android:textSize="48sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
     <View
         android:id="@+id/view2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#3E3434"
-        android:backgroundTint="#B5A4A4"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/factory_red"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintWidth_percent="0.9"
-        app:layout_constraintHeight_percent="0.9"
-        />
+        app:layout_constraintHeight_percent="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.9" />
 
     <TextView
         android:id="@+id/imageView4"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -102,6 +91,7 @@
 
     <Button
         android:id="@+id/btn_chicken"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#4A4542"
@@ -117,6 +107,7 @@
 
     <Button
         android:id="@+id/btn_cauliflower"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#4A4542"
@@ -133,6 +124,7 @@
     <Button
         android:id="@+id/btn_cow"
         android:layout_width="wrap_content"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
         android:backgroundTint="#4A4542"
         android:fontFamily="sans-serif-black"
@@ -149,6 +141,7 @@
         android:id="@+id/btn_pig"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:layout_marginStart="88dp"
         android:backgroundTint="#4A4542"
         android:fontFamily="sans-serif-black"
