--- a/app/src/main/res/layout/activity_speaking_exercises1.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises1.xml
@@ -10,9 +10,14 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="50dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.9"
         android:background="@color/campfire_ground"
         android:padding="20dp">
 
@@ -21,8 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/x"
+            android:paddingRight="10dp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,8 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/_1_2"
-            android:textSize="20dp"
             android:textColor="@color/black"
+            android:textSize="30dp"
             app:layout_constraintBottom_toTopOf="@+id/textView1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -45,8 +51,8 @@
             android:paddingTop="50dp"
             android:paddingBottom="30dp"
             android:text="@string/you_have_a_message_from_tony"
-            android:textSize="15sp"
             android:textColor="@color/black"
+            android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@+id/close_btn"
             tools:layout_editor_absoluteX="20dp" />
 
@@ -70,12 +76,12 @@
                 android:id="@+id/slow_listen"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_marginStart="10dp"
-                android:textStyle="bold"
-                android:textSize="20sp"
+                android:gravity="center"
+                android:text="@string/x0_5"
                 android:textColor="@color/black"
-                android:text="@string/x0_5"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
 
@@ -86,8 +92,8 @@
             android:gravity="center"
             android:paddingBottom="30dp"
             android:text="@string/what_did_tony_say_in_their_language"
-            android:textSize="20sp"
             android:textColor="@color/black"
+            android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 
@@ -110,61 +116,54 @@
             android:backgroundTint="@color/grass"
             android:text="@string/confirm"
             android:textColor="@color/white"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent" />
-
-        <FrameLayout
-            android:id="@+id/correct_pop_up"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#edb66d"
-                android:padding="10dp"
-                android:gravity="center_horizontal"
-               >
-
-                <TextView
-                    android:id="@+id/result"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="... answer!"
-                    android:textSize="25sp"
-                    android:textColor="@color/black"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:textColor="@color/black"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tony_said"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toTopOf="@+id/btn_continue"
-                    app:layout_constraintTop_toBottomOf="@+id/result"
-                    tools:layout_editor_absoluteX="20dp" />
-
-                <Button
-                    android:id="@+id/btn_continue"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/continue_str"
-                    android:textColor="@color/white"
-                    android:backgroundTint="@color/grass"
-                    app:layout_constraintBottom_toBottomOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/black_border"/>
-
-        </FrameLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="invisible"
+        android:id="@+id/correct_pop_up"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_margin="5dp"
+        android:background="@color/grass"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="20dp">
+
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="... answer!"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/tony_said"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_continue"
+            app:layout_constraintTop_toBottomOf="@+id/result"
+            tools:layout_editor_absoluteX="20dp" />
+
+        <Button
+            android:id="@+id/btn_continue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:text="@string/continue_str"
+            android:textColor="@color/grass"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
