Add media to speaking ex 1

--- a/app/src/main/res/layout/activity_speaking_exercises1.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises1.xml
@@ -99,6 +99,7 @@
 
         <EditText
             android:id="@+id/answer"
+            android:textColor="@color/black"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
