--- a/app/src/main/res/layout/activity_speaking_exercises2.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises2.xml
@@ -37,7 +37,7 @@
             android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/_1_2"
+            android:text="@string/_2_2"
             android:textSize="30sp"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/textView1"
@@ -113,7 +113,7 @@
 
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/user_answer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -131,7 +131,7 @@
             android:layout_height="wrap_content"
             android:text="@string/example_answers"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+            app:layout_constraintTop_toBottomOf="@+id/user_answer" />
 
         <TextView
             android:id="@+id/textView15"
